[gd_scene load_steps=56 format=3 uid="uid://bswqo3rvakv63"]

[ext_resource type="Texture2D" uid="uid://bd6b3oafhpg3g" path="res://Entities/Teleporter/Assets/Sprites/Ancient Tech Portal.png" id="1_2rwlw"]
[ext_resource type="Script" path="res://Entities/Teleporter/portal.gd" id="1_an43j"]
[ext_resource type="AudioStream" uid="uid://uxnmxatbmabq" path="res://Sounds/SFX/SE_BTL_WARP.wav" id="3_64rp1"]
[ext_resource type="AudioStream" uid="uid://dlt5a2mhsc1bt" path="res://Sounds/SFX/warp_pad.mp3" id="4_ahu4x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8bi"]
atlas = ExtResource("1_2rwlw")
region = Rect2(0, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8lc5"]
atlas = ExtResource("1_2rwlw")
region = Rect2(189, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_klns4"]
atlas = ExtResource("1_2rwlw")
region = Rect2(378, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7exps"]
atlas = ExtResource("1_2rwlw")
region = Rect2(567, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pbdt"]
atlas = ExtResource("1_2rwlw")
region = Rect2(756, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6l1n"]
atlas = ExtResource("1_2rwlw")
region = Rect2(945, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wstp0"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1134, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqwwd"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1323, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_48kd2"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1512, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mu7h"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1701, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddfnv"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1890, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t1ai"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2079, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x4ur"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2268, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_s38ex"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2457, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ok46"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2646, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha6hi"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2835, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7ko"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3024, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs65b"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3213, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gydo"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3402, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct1vv"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3591, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwnf"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3780, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sjob"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3969, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_2swd5"]
atlas = ExtResource("1_2rwlw")
region = Rect2(4158, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb423"]
atlas = ExtResource("1_2rwlw")
region = Rect2(4347, 0, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6pq3"]
atlas = ExtResource("1_2rwlw")
region = Rect2(0, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_opfd2"]
atlas = ExtResource("1_2rwlw")
region = Rect2(189, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmgnd"]
atlas = ExtResource("1_2rwlw")
region = Rect2(378, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_6msac"]
atlas = ExtResource("1_2rwlw")
region = Rect2(567, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_krpdb"]
atlas = ExtResource("1_2rwlw")
region = Rect2(756, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7suf2"]
atlas = ExtResource("1_2rwlw")
region = Rect2(945, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_37rkc"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1134, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc7xy"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1323, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2my6"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1512, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo3rw"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1701, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6fj2"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1890, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_eboh3"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2079, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_eedq1"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2268, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuwii"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2457, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgieo"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2646, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_31tpr"]
atlas = ExtResource("1_2rwlw")
region = Rect2(2835, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbq2y"]
atlas = ExtResource("1_2rwlw")
region = Rect2(3024, 90, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy8n1"]
atlas = ExtResource("1_2rwlw")
region = Rect2(0, 180, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0puy"]
atlas = ExtResource("1_2rwlw")
region = Rect2(189, 180, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo1n2"]
atlas = ExtResource("1_2rwlw")
region = Rect2(378, 180, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8xnt"]
atlas = ExtResource("1_2rwlw")
region = Rect2(567, 180, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq8fh"]
atlas = ExtResource("1_2rwlw")
region = Rect2(756, 180, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjasf"]
atlas = ExtResource("1_2rwlw")
region = Rect2(945, 180, 189, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaptl"]
atlas = ExtResource("1_2rwlw")
region = Rect2(1134, 180, 189, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_t7jxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8lc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7exps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pbdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6l1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wstp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqwwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48kd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mu7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddfnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t1ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x4ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s38ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ok46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha6hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs65b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gydo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct1vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sjob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2swd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb423")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6pq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opfd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmgnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6msac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krpdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7suf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37rkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc7xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2my6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo3rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6fj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eboh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eedq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuwii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgieo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31tpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbq2y")
}],
"loop": true,
"name": &"Ready",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy8n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0puy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo1n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8xnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq8fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjasf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaptl")
}],
"loop": false,
"name": &"Warp",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0x5iv"]
size = Vector2(302, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anqbf"]
size = Vector2(20, 17.5)

[node name="Portal" type="Node2D"]
texture_filter = 1
script = ExtResource("1_an43j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t7jxw")
animation = &"Warp"
autoplay = "Idle"
frame = 6
frame_progress = 1.0

[node name="DetectionArea" type="Area2D" parent="."]
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_0x5iv")

[node name="WarpArea" type="Area2D" parent="."]
position = Vector2(0, -9)
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WarpArea"]
position = Vector2(0, 29)
shape = SubResource("RectangleShape2D_anqbf")
debug_color = Color(0.983869, 0.451481, 0.78032, 0.419608)

[node name="Sounds" type="Node" parent="."]

[node name="Started" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_64rp1")
volume_db = -20.0
bus = &"SFX"

[node name="Warping" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_ahu4x")
volume_db = -20.0
bus = &"SFX"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-8.52651e-14, 39)
scale = Vector2(8.08, 0.360001)
polygon = PackedVector2Array(-4.82673, -11.1111, -9.03465, 16.6666, 9.15842, 16.6666, 4.82673, -11.1111)
one_way_collision = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_exited"]
[connection signal="area_entered" from="WarpArea" to="." method="_on_warp_area_entered"]
[connection signal="area_exited" from="WarpArea" to="." method="_on_warp_area_exited"]
